# codex-broll-finder

./: .gitignore  LICENSE  README.md  pyproject.toml
.ci/: quick_validate_plugin.py  quick_validate_skill.py
.github/workflows/: ci.yml
broll-finder/: SKILL.md
broll-finder/agents/: openai.yaml
broll-finder/references/: routing.md  verification.md
broll-finder/scripts/: broll_tool.py
docs/: goal.md  phase-1-build-goal.md  product-spec.md  source-review.md  video-archetypes.md
examples/archetypes/: README.md  run.py
examples/archetypes/founder-product-explainer/: KINO-EDIT.json  recipe.json  reference-analysis.json
examples/archetypes/social-short/: KINO-EDIT.json  recipe.json  reference-analysis.json
examples/quickstart/: README.md  run.py
kino/: SKILL.md
kino/agents/: openai.yaml
kino/references/: manifest.md  profile.md  verification.md
kino/scripts/: kino_tool.py
plugins/codex-broll-finder/.codex-plugin/: plugin.json
plugins/codex-broll-finder/skills/broll-finder/: SKILL.md
plugins/codex-broll-finder/skills/broll-finder/references/: exports.md  manifest.md  profile.md
plugins/codex-broll-finder/skills/broll-finder/scripts/: broll_tool.py
plugins/codex-broll-finder/src/codex_broll_finder/: capture.py  cli.py  validation.py
plugins/kino/.codex-plugin/: plugin.json
plugins/kino/skills/kino/: SKILL.md
plugins/kino/skills/kino/references/: exports.md  manifest.md
plugins/kino/src/kino/: archetypes.py  capture.py  cli.py  edit.py  eval.py  export.py  graph.py  manifest.py  plan.py  receipt.py  review.py  video.py
src/codex_broll_finder/: __init__.py  cli.py  export.py  manifest.py  presets.py  stills.py  validation.py
src/kino/: __init__.py  audio_qc.py  captions.py  cli.py  compile.py  planning.py  probe.py  qc.py  validation.py  video.py
tests/: test_archetype_fixtures.py  test_archetypes.py  test_archetypes_example.py  test_audio_qc.py  test_captions.py  test_cli.py  test_compile.py  test_docs_examples.py  test_edit.py  test_eval.py  test_export.py  test_graph.py  test_manifest.py  test_media_smoke.py  test_plan.py  test_planning.py  test_plugin_mirror.py  test_presets.py  test_probe.py  test_qc.py  test_quickstart.py  test_receipt.py  test_review.py  test_validation.py  test_video.py
