[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-broll-finder"
version = "0.1.0"
description = "Codex-native skill and helpers for b-roll sourcing and rendering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sergio Pesch" },
]
keywords = ["codex", "video-editing", "b-roll", "ffmpeg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "Pillow>=10",
  "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/sergiopesch/codex-broll-finder"
Repository = "https://github.com/sergiopesch/codex-broll-finder"
Issues = "https://github.com/sergiopesch/codex-broll-finder/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "PyYAML>=6",
  "ruff>=0.8",
]

[project.scripts]
broll-tool = "codex_broll_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
