[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kino"
version = "0.1.0"
description = "Codex-native video edit engine and helper workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sergio Pesch" },
]
keywords = ["codex", "video-editing", "edit-engine", "ffmpeg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "Pillow>=10",
  "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/sergiopesch/kino"
Repository = "https://github.com/sergiopesch/kino"
Issues = "https://github.com/sergiopesch/kino/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "PyYAML>=6",
  "ruff>=0.8",
]

[project.scripts]
kino = "kino.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
